# acron

./: .gitignore  2026-07-19-002415-local-command-caveatcaveat-the-messages-below.txt  AGENTS.md  CLAUDE.md  README.md  package-lock.json  skills-lock.json
backend/: .env.example  .gitignore  README.md  alembic.ini  gym_platform.db  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  constants.py  permissions.py  rate_limit.py  security.py  tenancy.py  totp.py
backend/app/db/: base.py  session.py
backend/app/integrations/: email.py  hibp.py  ocr.py  push.py  stripe_client.py  stripe_connect.py  stripe_webhook.py
backend/app/models/: __init__.py  audit_log.py  base.py  cash.py  class_session.py  idempotency_key.py  membership.py  organization.py  payment.py  payroll.py  plan.py  receipt.py  session.py  signup_attempt.py  staff.py  subscription.py  user.py  verification.py
backend/app/realtime/: __init__.py  events.py  manager.py
backend/app/schemas/: analytics.py  audit.py  auth.py  cash.py  classes.py  common.py  members.py  memberships.py  organizations.py  payments.py  payroll.py  plans.py  receipts.py  saas_billing.py  staff.py
backend/app/services/: analytics_service.py  audit_service.py  auth_service.py  cash_service.py  classes_service.py  idempotency_service.py  members_service.py  memberships_service.py  mfa_service.py  organizations_service.py  payments_service.py  payroll_service.py  plans_service.py  receipts_service.py  (+4 more)
backend/scripts/: init_cloud_schema.py
backend/tests/: conftest.py  helpers.py
(+237 files in other folders)
