[project]
name = "gym-platform-backend"
version = "0.1.0"
description = "Gym Operations Platform — multi-tenant SaaS backend (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "passlib[argon2]>=1.7",
    "stripe>=11.0",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "httpx>=0.28",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.38",
    "resend>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.9",
    "mypy>=1.14",
    "aiosqlite>=0.22.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
